metrics/kube-prometheus-stack/cert-extractor.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: cert-extractor
  namespace: kps
spec:
  containers:
  - name: alpine
    image: docker.io/alpine:3.17.3
    command: ["/bin/sh", "-c", "trap : TERM INT; sleep infinity & wait"]
    resources:
      limits:
        memory: 50Mi
    volumeMounts:
    - mountPath: /etc/kubernetes
      name: k8setcdcert
  hostNetwork: true
  nodeSelector:
    # node-role.kubernetes.io/etcd: "true"
    node-role.kubernetes.io/control-plane: ''
  tolerations:
  - key: node-role.kubernetes.io/etcd
    operator: Exists
  - key: node-role.kubernetes.io/control-plane
    operator: Exists
  volumes:
  - name: k8setcdcert
    hostPath:
      path: /etc/kubernetes
      type: ""
