metrics/kube-prometheus-stack/alertmanager.gen.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kps-alertmanager
  namespace: kps
  labels:
    app: kps-alertmanager
    self-monitor: "true"
    app.kubernetes.io/part-of: kps
    release: "kps"
    heritage: "Helm"
spec:
  ports:
  - name: http-web
    port: 9093
    targetPort: 9093
    protocol: TCP
  - name: reloader-web
    appProtocol: http
    port: 8080
    targetPort: reloader-web
  selector:
    app.kubernetes.io/name: alertmanager
    alertmanager: kps-alertmanager
  sessionAffinity: None
  type: "ClusterIP"
