metrics/kube-prometheus-stack/prometheus.gen.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kps-prometheus
  namespace: kps
  labels:
    app: kps-prometheus
    self-monitor: "true"
    app.kubernetes.io/part-of: kps
    release: "kps"
    heritage: "Helm"
spec:
  ports:
  - name: http-web
    port: 9090
    targetPort: 9090
  - name: reloader-web
    appProtocol: http
    port: 8080
    targetPort: reloader-web
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: kps-prometheus
  sessionAffinity: None
  type: "ClusterIP"
