metrics/kube-prometheus-stack/service-monitors.gen.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kps-coredns
  labels:
    app: kps-coredns
    jobLabel: coredns
    release: "kps"
  namespace: kube-system
spec:
  clusterIP: None
  ports:
    - name: http-metrics
      port: 9153
      protocol: TCP
      targetPort: 9153
  selector:
    k8s-app: kube-dns
---
apiVersion: v1
kind: Service
metadata:
  name: kps-kube-controller-manager
  labels:
    app: kps-kube-controller-manager
    jobLabel: kube-controller-manager
    release: "kps"
  namespace: kube-system
spec:
  clusterIP: None
  ports:
    - name: http-metrics
      port: 10257
      protocol: TCP
      targetPort: 10257
  selector:
    component: kube-controller-manager
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: kps-kube-scheduler
  labels:
    app: kps-kube-scheduler
    jobLabel: kube-scheduler
    release: "kps"
  namespace: kube-system
spec:
  clusterIP: None
  ports:
    - name: http-metrics
      port: 10259
      protocol: TCP
      targetPort: 10259
  selector:
    component: kube-scheduler
  type: ClusterIP
